--- a/answers.html
+++ b/answers.html
@@ -7,7 +7,7 @@
     <h1>Chapter 3 Answers</h1>
     <h2>Q1: Which is bigger</h2>
     <p>
-      
+      The JSON file is bigger.
     </p>
     <h2>Q2: Why is it bigger?</h2>
     <p>
