--- a/answers.html
+++ b/answers.html
@@ -11,11 +11,11 @@
     </p>
     <h2>Q2: Why is it bigger?</h2>
     <p>
-      
+      Because the JSON repeats the headers every time.
     </p>
     <h2>Q3: CSV and JSON abbreviations</h2>
     <p>
-      
+      CSV stands for Comma Separated Value. JSON stands for JavaScript Object Notation.
     </p>
     <h2>Q4: How is it sorted?</h2>
     <p>
