--- a/answers.html
+++ b/answers.html
@@ -19,11 +19,11 @@
     </p>
     <h2>Q4: How is it sorted?</h2>
     <p>
-      
+      It is sorted alphabetically.
     </p>
     <h2>Q5: Does it make sense?</h2>
     <p>
-      
+      No, the game play does not match the rules of baseball.
     </p>
     <a href="index.html">Return to pitch list</a>
   </body>
