--- a/answers.html
+++ b/answers.html
@@ -25,6 +25,15 @@
     <p>
       No, the gameplay does not match the rules of baseball.
     </p>
+    <h2>Q6: What good is sorting?</h2>
+    <p>
+      You can find errors in data. You can find minimum and maximum.
+    </p>
+    <h2>Q7: Which field(s) get the analysis?
+      <p>
+        
+      </p>
+    </h2>
     <a href="index.html">Return to pitch list</a>
   </body>
 </html>
