--- a/answers.html
+++ b/answers.html
@@ -31,7 +31,7 @@
     </p>
     <h2>Q7: Which field(s) get the analysis?
       <p>
-        
+        Mine did not generate any.
       </p>
     </h2>
     <a href="index.html">Return to pitch list</a>
